# http.fox

./: .gitignore  Cargo.toml  README.md  Rocket.toml  apko.yaml  build.rs  config.json.example  melange.yaml
data/: 100.md  101.md  102.md  103.md  200.md  201.md  202.md  203.md  206.md  207.md  300.md  301.md  302.md  303.md  400.md  402.md  404.md  405.md  408.md  409.md  421.md  429.md  508.md  509.md  521.md  525.md  530.md  base.html.tera  index.html.tera
src/: config.rs  credits.json  credits.rs  error.rs  lib.rs  main.rs  png.rs  status.json  status.rs  svg.rs
static/json/: site.webmanifest
static_src/: .gitignore  .pnp.cjs  gulpfile.ts  package.json  rome.json  tailwind.config.ts  tsconfig.json
static_src/src/css/: bundle.scss
static_src/src/js/: app.ts  theme.ts
templates/: base.html.tera  credits.html.tera  footer.html.tera  index.html.tera  nav.html.tera
templates/components/: mdnspec.html.tera
templates/statuses/: 100.html.tera  101.html.tera  102.html.tera  103.html.tera  200.html.tera  201.html.tera  202.html.tera  203.html.tera  206.html.tera  207.html.tera  300.html.tera  301.html.tera  302.html.tera  303.html.tera  400.html.tera  402.html.tera  404.html.tera  405.html.tera  408.html.tera  409.html.tera  421.html.tera  429.html.tera  508.html.tera  509.html.tera  521.html.tera  525.html.tera  530.html.tera  README.md  base.html.tera  status.html.tera  utils.html.tera
