[package]
name = "httpfox"
version = "0.1.0"
authors = ["Jamie Murphy <hello@itsjamie.dev>"]
edition = "2021"
description = "HTTP Foxxos"
license = "MIT"

[lib]
name = "httpfox"

[dependencies]
base64 = "0.21.2"
image = "0.24.6"
resvg = "0.35.0"
rocket = "=0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = "1.0.171"
