[package]
name = "httpfox"
version = "0.1.0"
authors = ["Jamie Murphy <hello@itsjamie.dev>"]
edition = "2021"
description = "HTTP Foxxos"
license = "MIT"
default-run = "httpfox"

[lib]
name = "httpfox"

[dependencies]
base64 = "0.21.2"
image = "0.24.6"
pulldown-cmark = "0.9.3"
resvg = "0.35.0"
rocket = "=0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = { version = "1.0.171", features = ["derive" ]}
serde_json = "1.0.102"
